--- a/matcher/css/match.css
+++ b/matcher/css/match.css
@@ -3,7 +3,7 @@ body.page-matcher {
     background: radial-gradient(circle at top right, #2a0040, #0f0f0f 60%);
     background-attachment: fixed;
     color: #fff;
-    font-family: "Inter", sans-serif;
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -314,14 +314,15 @@ body.page-matcher {
 }
 #btnDownload {
     pointer-events: auto;
+    font-family: "Poppins", sans-serif;
     background-color: #1db954;
     color: #fff;
     padding: 16px 40px;
     border-radius: 50px;
-    font-weight: 800;
+    font-weight: 600;
     border: none;
     cursor: pointer;
-    text-transform: uppercase;
+    text-transform: capitalize;
     letter-spacing: 1px;
     font-size: 1rem;
     transition: 0.3s;
