--- a/live/css/home.css
+++ b/live/css/home.css
@@ -130,7 +130,6 @@
 }
 .card-inicial {
     background-color: rgb(24 24 24 / 0.85);
-    padding: 40px 40px 20px;
     border-radius: 24px;
     border: 1px solid rgb(255 255 255 / 0.1);
     backdrop-filter: blur(10px);
@@ -138,6 +137,44 @@
     max-width: 400px;
     width: 100%;
     box-shadow: 0 20px 40px rgb(0 0 0 / 0.4);
+    position: relative !important;
+    overflow: hidden !important;
+    padding: 30px 40px 20px !important;
+}
+.github-ribbon-container {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    pointer-events: none;
+    z-index: 10;
+}
+.github-ribbon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 150px;
+    height: 40px;
+    background-color: #bb86fc;
+    color: #000 !important;
+    transform: translate(-50%, -50%) rotate(-45deg) translateY(20px);
+    box-shadow: 0 0 5px rgb(0 0 0 / 0.3);
+    pointer-events: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s;
+    padding-bottom: 15px;
+}
+.github-ribbon:hover {
+    background-color: #fff;
+}
+.github-ribbon svg {
+    width: 16px;
+    height: 16px;
+    transform: rotate(0deg);
 }
 .card-inicial h1 {
     margin-bottom: 10px;
@@ -294,7 +331,7 @@ button:hover {
 }
 .content-text h2 {
     font-size: 2.5rem;
-    font-weight: 900;
+    font-weight: 700;
     color: #f0f0f0;
     margin-bottom: 20px;
 }
