feat(general): Change in path and unification of the custom fonts folder.

--- a/counter/css/base.css
+++ b/counter/css/base.css
@@ -2,31 +2,31 @@
     font-family: "DM Sans";
     font-style: normal;
     font-weight: 400;
-    src: url('assets/fonts/dm-sans-400.woff2') format("woff2");
+    src: url('../assets/fonts/dm-sans-400.woff2') format("woff2");
 }
 @font-face {
     font-family: "DM Sans";
     font-style: normal;
     font-weight: 500;
-    src: url('assets/fonts/dm-sans-500.woff2') format("woff2");
+    src: url('../assets/fonts/dm-sans-500.woff2') format("woff2");
 }
 @font-face {
     font-family: "DM Sans";
     font-style: normal;
     font-weight: 700;
-    src: url('assets/fonts/dm-sans-700.woff2') format("woff2");
+    src: url('../assets/fonts/dm-sans-700.woff2') format("woff2");
 }
 @font-face {
     font-family: "Outfit";
     font-style: normal;
     font-weight: 600;
-    src: url('assets/fonts/outfit-600.woff2') format("woff2");
+    src: url('../assets/fonts/outfit-600.woff2') format("woff2");
 }
 @font-face {
     font-family: "Outfit";
     font-style: normal;
     font-weight: 800;
-    src: url('assets/fonts/outfit-800.woff2.woff2') format("woff2");
+    src: url('../assets/fonts/outfit-800.woff2.woff2') format("woff2");
 }
 
 * {
